--- a/session3/tsconfig.json
+++ b/session3/tsconfig.json
@@ -1,8 +1,14 @@
 {
-    "compilerOptions": {
-      "target": "ES2022",
-      "module": "ES2022",
-      "rootDir": "./src",
-      "strict": true,
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "ES2022",
+    "rootDir": "./src",
+    "strict": true,
+    "experimentalDecorators": true,
+    "paths": {
+      "tslib": [
+        "./node_modules/tslib/tslib.d.ts"
+      ]
     }
+  }
 }
